# direct-fourier

./: direct-fourier.cabal
Numeric/: Fourier.hs
